--- a/CNN_model.ipynb
+++ b/CNN_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEfL1Cm5FFAV2W4vL6wc8E",
+      "authorship_tag": "ABX9TyP6JFcBDV4RzQMKeaJjaOfq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/pitrovic/Simple-CNN-model/blob/main/CNN_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/pitrovic/Simple-CNN-model/blob/Alpha_Branch/CNN_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,7 +33,184 @@
         "id": "teDI0In0kXbu"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "#Importing the dataset cifar10\n",
+        "from tensorflow.keras.datasets import cifar10\n",
+        "\n",
+        "(x_train, y_train),(x_test, y_test) = cifar10.load_data()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Normalizing pixel values to the range [0, 1]\n",
+        "x_train = x_train / 255.0\n",
+        "x_test = x_test / 255.0"
+      ],
+      "metadata": {
+        "id": "qVnEW0f5u8iU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Converting labels into one-hot encoded vectors\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "\n",
+        "y_train = to_categorical(y_train, num_classes=10)\n",
+        "y_test = to_categorical(y_test, num_classes=10)"
+      ],
+      "metadata": {
+        "id": "o7g7ahTkvNfa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
+        "\n",
+        "model = Sequential()\n",
+        "\n",
+        "#Input layer: 32x32x3 images\n",
+        "#Convolutional layer with 32 filters, 3x3 kernel size, and ReLU activation\n",
+        "#Max pooling layer with 2x2 pool size\n",
+        "model.add(Conv2D(32, (3, 3), activation='relu', padding='same', input_shape=(32, 32, 3)))\n",
+        "model.add(Conv2D(32, (3, 3), activation='relu', padding='same'))\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "\n",
+        "#Convolutional layer with 64 filters, 3x3 kernel size, and ReLU activation\n",
+        "#Max pooling layer with 2x2 pool size\n",
+        "model.add(Conv2D(64, (3, 3), activation='relu', padding='same'))\n",
+        "model.add(Conv2D(64, (3, 3), activation='relu', padding='same'))\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "\n",
+        "#Convolutional layer with 128 filters, 3x3 kernel size, and ReLU activation\n",
+        "#Max pooling layer with 2x2 pool size\n",
+        "model.add(Conv2D(128, (3, 3), activation='relu', padding='same'))\n",
+        "model.add(Conv2D(128, (3, 3), activation='relu', padding='same'))\n",
+        "model.add(MaxPooling2D((2, 2)))\n",
+        "\n",
+        "#flatten the 3D output to a 1D vector\n",
+        "model.add(Flatten())\n",
+        "\n",
+        "#Fully connected layer with 128 neurons\n",
+        "model.add(Dense(128, activation='relu'))\n",
+        "\n",
+        "model.add(Dense(10, activation='softmax'))\n",
+        "\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X4NatPTtvNnX",
+        "outputId": "2b1aea69-aa0e-4481-83ea-f8457a36197a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_1\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d_6 (Conv2D)           (None, 32, 32, 32)        896       \n",
+            "                                                                 \n",
+            " conv2d_7 (Conv2D)           (None, 32, 32, 32)        9248      \n",
+            "                                                                 \n",
+            " max_pooling2d_3 (MaxPoolin  (None, 16, 16, 32)        0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " conv2d_8 (Conv2D)           (None, 16, 16, 64)        18496     \n",
+            "                                                                 \n",
+            " conv2d_9 (Conv2D)           (None, 16, 16, 64)        36928     \n",
+            "                                                                 \n",
+            " max_pooling2d_4 (MaxPoolin  (None, 8, 8, 64)          0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " conv2d_10 (Conv2D)          (None, 8, 8, 128)         73856     \n",
+            "                                                                 \n",
+            " conv2d_11 (Conv2D)          (None, 8, 8, 128)         147584    \n",
+            "                                                                 \n",
+            " max_pooling2d_5 (MaxPoolin  (None, 4, 4, 128)         0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " flatten_1 (Flatten)         (None, 2048)              0         \n",
+            "                                                                 \n",
+            " dense_2 (Dense)             (None, 128)               262272    \n",
+            "                                                                 \n",
+            " dense_3 (Dense)             (None, 10)                1290      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 550570 (2.10 MB)\n",
+            "Trainable params: 550570 (2.10 MB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6cp_Nl1MvNs1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pS2klzY2vNvn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7ny19kdfvNyW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qmnDVmlnvN1C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "54WX7xwXvN3q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "z3bWiDdwvN7r"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
