--- a/CNN_model.ipynb
+++ b/CNN_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8rPt9V9yn01rkCvbfIF9F",
+      "authorship_tag": "ABX9TyMXVGiyPNJA+s0gqfXvzQxG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,8 +161,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#Compiling the Model\n",
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
-        "\n",
+        "#Training the Model\n",
         "history = model.fit(x_train, y_train, epochs=10, batch_size=32, validation_data=(x_test, y_test))"
       ],
       "metadata": {
@@ -206,14 +207,14 @@
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
-        "\n",
+        "#Plotting Accuracy\n",
         "plt.plot(history.history['accuracy'], label='accuracy')\n",
         "plt.plot(history.history['val_accuracy'], label='val_accuracy')\n",
         "plt.xlabel('Epoch')\n",
         "plt.ylabel('Accuracy')\n",
         "plt.legend()\n",
         "plt.show()\n",
-        "\n",
+        "#Plotting Loss\n",
         "plt.plot(history.history['loss'], label='loss')\n",
         "plt.plot(history.history['val_loss'], label='val_loss')\n",
         "plt.xlabel('Epoch')\n",
@@ -255,7 +256,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "predictions = model.predict(x_test)\n",
+        "predicted_classes = np.argmax(predictions, axis=1)"
+      ],
       "metadata": {
         "id": "7ny19kdfvNyW"
       },
